--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
 <md-toolbar color="primary">
   <span>Angularfire</span>
 </md-toolbar>
-<div>
+<div class="main-container">
   <div fxFlexOffset.gt-sm="15%" fxFlex.gt-sm="70%">
-    <p>container</p>
+    <app-company></app-company>
     <router-outlet></router-outlet>
   </div>
 </div>
