--- a/src/styles.css
+++ b/src/styles.css
@@ -6,6 +6,6 @@
 
 body {
     margin: 0;
-    font-family:  Roboto sans-serif;
+    font-family:  Roboto, sans-serif;
     background-color: whitesmoke;
 }
