--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
 </md-toolbar>
 <div>
   <div fxFlexOffset.gt-sm="15%" fxFlex.gt-sm="70%">
-    <p>container</p>
+    <app-company-edit></app-company-edit>
     <router-outlet></router-outlet>
   </div>
 </div>
