m5 pre html filter

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,10 @@
 <md-toolbar color="primary">
   <div fxLayoutAlign="space-between center" class="nav-buttons">
     <span>Angularfire</span>
-    <button md-button [routerLink]="['/company-list']">Companies</button>
+    <div>
+      <button md-button [routerLink]="['/company-list']">Companies</button>
+      <button md-button [routerLink]="['/contact-list']">Contacts</button>
+    </div>
   </div>
 </md-toolbar>
 <div>
