--- a/src/app/contact/contact-list/contact-list.component.html
+++ b/src/app/contact/contact-list/contact-list.component.html
@@ -1,6 +1,6 @@
 <div fxLayoutAlign="space-between center">
   <h1>Contacts</h1>
-  <md-select placeholder="company" (change)="getContacts($event.value)">
+  <md-select placeholder="company" (change)="contactService.subject$.next($event.value)">
     <md-option [value]="undefined">All</md-option>
     <md-option *ngFor="let company of companies$ | async" [value]="company.$key">{{company.name}}</md-option>
   </md-select>
