--- a/src/app/contact/contact-edit/contact-edit.component.html
+++ b/src/app/contact/contact-edit/contact-edit.component.html
@@ -1,13 +1,17 @@
 <h1>Contact Edit</h1>
-<md-card *ngIf="contact$ | async as contact">
+<md-card *ngIf="contact">
     <md-input-container>
         <input type="text" mdInput [(ngModel)]="contact.name">
     </md-input-container>
     <div *ngIf="!isNewContact">
-        <md-select placeholder="company" [(ngModel)]="contact.companyKey">
-            <md-option *ngFor="let company of companies$ | async" [value]="company.$key">{{company.name}}</md-option>
+        <md-select placeholder="company" [(ngModel)]="selectedCompany">
+            <md-option *ngFor="let company of companies$ | async" [value]="company">{{company.name}}</md-option>
         </md-select>
+        <button md-raised-button (click)="addCompany()">Add Company</button>
     </div>
+    <md-list>
+        <md-list-item *ngFor="let company of contactCompanies">{{company.name}}</md-list-item>
+    </md-list>
     <md-card-actions align="right">
         <button md-button (click)="saveContact(contact)">Save</button>
         <button md-button (click)="removeContact(contact)">Remove</button>
