--- a/src/app/contact/contact-edit/contact-edit.component.html
+++ b/src/app/contact/contact-edit/contact-edit.component.html
@@ -1,5 +1,5 @@
 <h1>Contact Edit</h1>
-<md-card *ngIf="contact">
+<md-card>
     <md-input-container>
         <input type="text" mdInput [(ngModel)]="contact.name">
     </md-input-container>
