--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,13 @@
 <md-toolbar color="primary">
   <div fxLayoutAlign="space-between center" class="nav-buttons">
-    <span>Angularfire</span>
-    <div>
+   <button md-button [routerLink]="['/home']">AngularFire</button>
+    <div *ngIf="!(authService.user$ | async)?.uid">
+      <button md-button (click)="authService.login()">Login</button>
+    </div>
+    <div *ngIf="(authService.user$ | async)?.uid">
       <button md-button [routerLink]="['/company-list']">Companies</button>
       <button md-button [routerLink]="['/contact-list']">Contacts</button>
+      <button md-button (click)="authService.logout()">Logout</button>
     </div>
   </div>
 </md-toolbar>
