--- a/src/app/company/company-list/company-list.component.html
+++ b/src/app/company/company-list/company-list.component.html
@@ -5,5 +5,5 @@
   <button md-button [routerLink]="['/company-edit/', company.$key]">Edit</button>
 </md-card>
 <button md-fab [routerLink]="['/company-edit', 'new']">
-  <md-icon>addd</md-icon>
+  <md-icon>add</md-icon>
 </button>
